<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.unAuthScreens.register.Register">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.unAuthScreens.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/first_name"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/firstName"
            android:text="@={viewModel.firstName}"
            app:helperText="@{viewModel.isFirstNameValid ? null : @string/name_error}"
            app:helperTextEnabled="@{!viewModel.isFirstNameValid}"
            app:helperTextTextColor="@color/design_default_color_error" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/last_name"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/lastName"
            android:text="@={viewModel.lastName}"
            app:helperText="@{viewModel.isLastNameValid() ? null : @string/name_error}"
            app:helperTextEnabled="@{!viewModel.isLastNameValid()}"
            app:helperTextTextColor="@color/design_default_color_error" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/email"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:text="@={viewModel.email}"
            app:helperText="@{ viewModel.isEmailValid() ? null : @string/email_error}"
            app:helperTextEnabled="@{!viewModel.isEmailValid()}"
            app:helperTextTextColor="@color/design_default_color_error" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/password"
            endiconMode="password_toggle"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:text="@={viewModel.password}"
            app:helperText="@{viewModel.isPasswordValid() ? null :@string/password_error}"
            app:helperTextEnabled="@{!viewModel.isPasswordValid()}"
            app:helperTextTextColor="@color/design_default_color_error" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/confirm_password"
            endiconMode="password_toggle"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:text="@={viewModel.confirmPassword}"
            app:helperText="@{ viewModel.isConfirmPasswordValid() ? null : @string/confirm_password_error}"
            app:helperTextEnabled="@{!viewModel.isConfirmPasswordValid()}"
            app:helperTextTextColor="@color/design_default_color_error" />

        <com.example.myapplication.ui.views.ImagePicker
            android:id="@+id/image_view"
            android:layout_width="150sp"
            android:layout_height="150sp"
            android:contentDescription="@string/uploaded_image"
            android:src="@mipmap/add_image_round" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="20sp" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/login_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_link"
            android:textColor="?attr/colorPrimary" />
    </LinearLayout>
</layout>
