<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.authScreens.profile.Profile">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.authScreens.profile.ProfileViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="400sp"
            android:gravity="center"
            android:orientation="vertical">

            <com.example.myapplication.ui.views.ImagePicker
                android:id="@+id/image_view"
                android:layout_width="200sp"
                android:layout_height="200sp"
                android:layout_weight="1"
                android:contentDescription="@string/uploaded_image"
                android:src="@mipmap/add_image_round" />

            <com.example.myapplication.ui.views.CustomTextInput
                android:id="@+id/first_name"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/firstName"
                android:text="@={viewModel.firstName}"
                app:helperTextEnabled="@={!viewModel.isFirstNameValid()}" />

            <com.example.myapplication.ui.views.CustomTextInput
                android:id="@+id/last_name"
                android:layout_width="370dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/lastName"
                android:text="@={viewModel.lastName}"
                app:helperTextEnabled="@={viewModel.isLastNameValid()}" />
        </LinearLayout>
        <Button
            android:id="@+id/save_changes_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/save_changes"
            android:textColor="?attr/colorOnPrimary" />
        <Button
            android:id="@+id/logout_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/logout"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>
</layout>