<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.authScreens.addNewReview.AddNewReview">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.ui.authScreens.addNewReview.AddNewReviewViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/add_review_title"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:text="@={viewModel.movieTitle}"
            android:enabled="false"
            android:textSize="24sp" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/review_title"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/title"
            android:text="@={viewModel.title}" />

        <com.example.myapplication.ui.views.CustomTextInput
            android:id="@+id/review_content"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:hint="@string/content"
            android:inputType="textMultiLine"
            android:lines="5"
            android:text="@={viewModel.content}" />

        <com.example.myapplication.ui.views.ImagePicker
            android:id="@+id/image_view"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:contentDescription="@string/uploaded_image"
            android:src="@mipmap/add_image_round" />
        <Button
            android:id="@+id/save_changes_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/post_review"
            android:textColor="?attr/colorOnPrimary" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </LinearLayout>
</layout>