<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".unAuthScreens.login.Login">

    <data>

        <variable
            name="viewModel"
            type="com.example.myapplication.unAuthScreens.login.LoginViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            app:helperText="@{ viewModel.isEmailValid() ? null : @string/email_error}"
            app:helperTextEnabled="@{!viewModel.isEmailValid()}"
            app:helperTextTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            app:helperText="@{viewModel.isPasswordValid() ? null :@string/password_error}"
            app:helperTextEnabled="@{!viewModel.isPasswordValid()}"
            app:helperTextTextColor="@color/design_default_color_error">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                endiconMode="password_toggle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/login_button"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/login"
            android:textColor="?attr/colorOnPrimary" />

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            style="@style/Widget.MaterialComponents.CircularProgressIndicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:visibility="gone" />

        <TextView
            android:id="@+id/register_link"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_link"
            android:textColor="?attr/colorPrimary" />

    </LinearLayout>
</layout>